--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -3,9 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Eatly</title>
     <link rel="stylesheet" href="/firstProject/css/reset.css" />
     <link rel="stylesheet" href="/firstProject/css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Josefin+Sans:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="header">
+        <div class="header__logo">
+          <img src="/firstProject/images/Logo.svg" alt="eatlyLogo" />
+          <span class="logo_text">eatly</span>
+        </div>
+        <nav class="header__navigation">
+          <ul class="navigation_buttons">
+            <li>Menu</li>
+            <li>Blog</li>
+            <li>Pricing</li>
+            <li>Contacts</li>
+          </ul>
+        </nav>
+        <div class="header__registration">
+          <button class="whiteButton">Login</button>
+          <button class="purpleButton">Sign Up</button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
