--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -31,6 +31,59 @@
           <button class="purpleButton">Sign Up</button>
         </div>
       </div>
+      <section class="application">
+        <div class="section__box">
+          <div class="box_left">
+            <div class="left_user">
+              <img src="/firstProject/images/Line 203.svg" alt="line203" />
+              <span class="user_text">OVER 1000 USERS</span>
+            </div>
+            <div class="left_content">
+              <h1 class="content_title">
+                Enjoy Foods All Over The <purple>World</purple>
+              </h1>
+              <span class="content_subtitle"
+                >EatLy help you set saving goals, earn cash back offers, Go to
+                disclaimer for more details and get paychecks up to two days
+                early. <purple>Get a $20 bonus.</purple></span
+              >
+            </div>
+            <div class="left_buttons">
+              <button class="button_first purpleButton">Get Started</button>
+              <button class="button_second whiteButton">Go Pro</button>
+            </div>
+            <div class="left_rating">
+              <img
+                src="/firstProject/images/trustpilot-1 1.svg"
+                alt="greenStarLogo"
+              />
+              <img
+                src="/firstProject/images/Star.svg"
+                alt="fiveStars"
+                id="rating_stars"
+              />
+              <span class="rating_text">4900+</span>
+            </div>
+          </div>
+          <div class="box_right">
+            <div class="card right_card">
+              <img
+                src="/firstProject/images/Food Image.svg"
+                alt="smallPlate"
+                id="smallPlate"
+              />
+              <div class="card_text">
+                <span class="card_title">Chicken Hell</span>
+                <span class="card_subtitle">On The Way</span>
+                <span class="card_time">3:09 PM</span>
+              </div>
+            </div>
+            <div class="card_picture">
+              <img src="/firstProject/images/Food Image.svg" alt="bigPlate" />
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
