few more sections

--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -31,7 +31,10 @@
           <button class="purpleButton">Sign Up</button>
         </div>
       </div>
-      <section class="application">
+    </div>
+
+    <section class="application">
+      <div class="container">
         <div class="section__box">
           <div class="box_left">
             <div class="left_user">
@@ -80,10 +83,126 @@
             </div>
             <div class="card_picture">
               <img src="/firstProject/images/Food Image.svg" alt="bigPlate" />
+              <img
+                src="/firstProject/images/Ellipse 2038.svg"
+                alt="purpleBackground"
+                class="card_background"
+              />
             </div>
           </div>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
+
+    <section class="features">
+      <div class="features__box">
+        <div class="features_item">
+          <h1 class="features_title">10K+</h1>
+          <span class="features_subtitle"
+            >Satisfied Costumers All Great Over The World
+          </span>
+        </div>
+        <div class="features_item">
+          <h1 class="features_title">4M</h1>
+          <span class="features_subtitle"
+            >Healthy Dishes Sold Including Milk Shakes Smooth</span
+          >
+        </div>
+        <div class="features_item">
+          <h1 class="features_title">99.99%</h1>
+          <span class="features_subtitle"
+            >Reliable Customer Support We Provide Great Experiences</span
+          >
+        </div>
+      </div>
+    </section>
+
+    <section class="application">
+      <div class="container">
+        <div class="application__box">
+          <div class="application_left">
+            <img src="/firstProject/images/Mobile.svg" alt="mobileApp" />
+          </div>
+          <div class="application_right">
+            <h1 class="application_right_title">
+              Premium <purple>Quality</purple> For Your Health
+            </h1>
+            <ul class="application_right_list">
+              <li class="application_right_list_item">
+                Premium quality food is made with ingredients that are packed
+                with essential vitamins, minerals.
+              </li>
+              <li class="application_right_list_item">
+                These foods promote overall wellness by support healthy
+                digestion and boosting immunity
+              </li>
+            </ul>
+            <div class="application_right_more">
+              <button class="more_button purpleButton">
+                Download
+                <img src="/firstProject/images/Arrow.svg" alt="whiteArrow" />
+              </button>
+              <img
+                src="/firstProject/images/Vector 14.svg"
+                alt="vectorArrow"
+                class="application_right_more_vector"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="restaurants">
+      <div class="container">
+        <div class="restaurants_header">
+          <span class="header_top">Our Top <purple>Restaurants</purple></span>
+        </div>
+        <div class="restaurants_list">
+          <div class="restaurants_list_item">
+            <img
+              src="/firstProject/images/Resturent Image.jpg"
+              alt="chickenKing"
+            />
+            <div class="item_information">
+              <img src="" alt="" />
+              <span class="item_information_name">The Chicken King</span>
+              <div class="item_information_details">
+                <span class="details_time">24min •</span>
+                <img src="" alt="star" />
+                <span class="details_rating">4.9</span>
+                <button class="details_favorite_button"></button>
+              </div>
+            </div>
+          </div>
+          <div class="restaurants_list_item">
+            <img src="/firstProject/images/burger king.svg" alt="burgerKing" />
+            <div class="item_information">
+              <img src="" alt="" />
+              <span class="item_information_name">The Burger King</span>
+              <div class="item_information_details">
+                <span class="details_time">24min •</span>
+                <img src="" alt="star" />
+                <span class="details_rating">4.9</span>
+                <button class="details_favorite_button"></button>
+              </div>
+            </div>
+          </div>
+          <div class="restaurants_list_item">
+            <img src="/firstProject/images/chiken King.svg" alt="chickenKing" />
+            <div class="item_information">
+              <img src="" alt="" />
+              <span class="item_information_name">The Chicken King</span>
+              <div class="item_information_details">
+                <span class="details_time">24min •</span>
+                <img src="" alt="star" />
+                <span class="details_rating">4.9</span>
+                <button class="details_favorite_button"></button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
