--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -11,8 +11,9 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
-    <div class="container">
+    <header class="container">
       <div class="header">
         <div class="header__logo">
           <img src="/firstProject/images/Logo.svg" alt="eatlyLogo" />
@@ -20,10 +21,21 @@
         </div>
         <nav class="header__navigation">
           <ul class="navigation_buttons">
-            <li>Menu</li>
-            <li>Blog</li>
-            <li>Pricing</li>
-            <li>Contacts</li>
+            <a href="#" class="header__link">
+              <li>Menu</li>
+            </a>
+
+            <a href="#" class="header__link">
+              <li>Blog</li>
+            </a>
+
+            <a href="#" class="header__link">
+              <li>Pricing</li>
+            </a>
+
+            <a href="#" class="header__link">
+              <li>Contacts</li>
+            </a>
           </ul>
         </nav>
         <div class="header__registration">
@@ -31,11 +43,11 @@
           <button class="purpleButton">Sign Up</button>
         </div>
       </div>
-    </div>
+    </header>
 
     <section class="application">
       <div class="container">
-        <div class="section__box">
+        <div class="section__inner">
           <div class="box_left">
             <div class="left_user">
               <img src="/firstProject/images/Line 203.svg" alt="line203" />
@@ -45,6 +57,7 @@
               <h1 class="content_title">
                 Enjoy Foods All Over The <purple>World</purple>
               </h1>
+
               <span class="content_subtitle"
                 >EatLy help you set saving goals, earn cash back offers, Go to
                 disclaimer for more details and get paychecks up to two days
@@ -68,6 +81,7 @@
               <span class="rating_text">4900+</span>
             </div>
           </div>
+
           <div class="box_right">
             <div class="card right_card">
               <img
@@ -119,7 +133,7 @@
 
     <section class="application">
       <div class="container">
-        <div class="application__box">
+        <div class="application__inner">
           <div class="application_left">
             <img src="/firstProject/images/Mobile.svg" alt="mobileApp" />
           </div>
@@ -158,15 +172,18 @@
         <div class="restaurants_header">
           <span class="header_top">Our Top <purple>Restaurants</purple></span>
         </div>
+
         <div class="restaurants_list">
           <div class="restaurants_list_item">
             <img
               src="/firstProject/images/Resturent Image.jpg"
               alt="chickenKing"
             />
+
             <div class="item_information">
               <img src="" alt="" />
               <span class="item_information_name">The Chicken King</span>
+
               <div class="item_information_details">
                 <span class="details_time">24min •</span>
                 <img src="" alt="star" />
@@ -175,11 +192,13 @@
               </div>
             </div>
           </div>
+
           <div class="restaurants_list_item">
             <img src="/firstProject/images/burger king.svg" alt="burgerKing" />
             <div class="item_information">
               <img src="" alt="" />
               <span class="item_information_name">The Burger King</span>
+
               <div class="item_information_details">
                 <span class="details_time">24min •</span>
                 <img src="" alt="star" />
@@ -188,11 +207,14 @@
               </div>
             </div>
           </div>
+
           <div class="restaurants_list_item">
             <img src="/firstProject/images/chiken King.svg" alt="chickenKing" />
+
             <div class="item_information">
               <img src="" alt="" />
               <span class="item_information_name">The Chicken King</span>
+
               <div class="item_information_details">
                 <span class="details_time">24min •</span>
                 <img src="" alt="star" />
