restaurant section changed

--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -69,7 +69,7 @@
             </div>
           </div>
           <div class="box_right">
-            <div class="card right_card">
+            <div class="right_card card">
               <img
                 src="/firstProject/images/Food Image.svg"
                 alt="smallPlate"
@@ -165,39 +165,57 @@
               alt="chickenKing"
             />
             <div class="item_information">
-              <img src="" alt="" />
+              <span class="item_information_highlight healthy">Healthy</span>
               <span class="item_information_name">The Chicken King</span>
               <div class="item_information_details">
                 <span class="details_time">24min •</span>
-                <img src="" alt="star" />
-                <span class="details_rating">4.9</span>
-                <button class="details_favorite_button"></button>
+                <img src="/firstProject/images/purpleStar.svg" alt="star" />
+                <span class="details_rating">4.8</span>
+                <button class="details_favorite_button favorite">
+                  <img
+                    src="/firstProject/images/Bookmark.svg"
+                    alt="favorite button"
+                  />
+                </button>
               </div>
             </div>
           </div>
           <div class="restaurants_list_item">
-            <img src="/firstProject/images/burger king.svg" alt="burgerKing" />
+            <img src="/firstProject/images/burgerKing.jpg" alt="burgerKing" />
             <div class="item_information">
-              <img src="" alt="" />
+              <span class="item_information_highlight trending">Trending</span>
               <span class="item_information_name">The Burger King</span>
               <div class="item_information_details">
                 <span class="details_time">24min •</span>
-                <img src="" alt="star" />
+                <img src="/firstProject/images/purpleStar.svg" alt="star" />
                 <span class="details_rating">4.9</span>
-                <button class="details_favorite_button"></button>
+                <button class="details_favorite_button favorite">
+                  <img
+                    src="/firstProject/images/Bookmark.svg"
+                    alt="favorite button"
+                  />
+                </button>
               </div>
             </div>
           </div>
           <div class="restaurants_list_item">
-            <img src="/firstProject/images/chiken King.svg" alt="chickenKing" />
+            <img
+              src="/firstProject/images/Resturent Image.jpg"
+              alt="chickenKing"
+            />
             <div class="item_information">
-              <img src="" alt="" />
+              <span class="item_information_highlight healthy">Healthy</span>
               <span class="item_information_name">The Chicken King</span>
               <div class="item_information_details">
                 <span class="details_time">24min •</span>
-                <img src="" alt="star" />
-                <span class="details_rating">4.9</span>
-                <button class="details_favorite_button"></button>
+                <img src="/firstProject/images/purpleStar.svg" alt="star" />
+                <span class="details_rating">4.8</span>
+                <button class="details_favorite_button favorite">
+                  <img
+                    src="/firstProject/images/Bookmark.svg"
+                    alt="favorite button"
+                  />
+                </button>
               </div>
             </div>
           </div>
