added dishes section

--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -241,6 +241,117 @@
             </div>
           </div>
         </div>
+        <div class="restaurants_bottom">
+          <a href="#">
+            <span class="restaurants_bottom_text"> View All -> </span>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <section class="dishes">
+      <div class="container">
+        <div class="dishes_wrapper">
+          <div class="dishes_header">
+            <span class="dishes_title">Our Top <purple>Dishes</purple></span>
+          </div>
+          <div class="dishes_main">
+            <div class="dishes_main_item">
+              <img src="/firstProject/images/Food Image1.svg" alt="" />
+              <div class="dishes_item_information">
+                <span class="item_highlight highlight healthy">Healthy</span>
+                <span class="dishes_item_name">Chicken Hell</span>
+                <div class="dishes_item_details">
+                  <span class="dishes_details_time">24min •</span>
+                  <img src="/firstProject/images/purpleStar.svg" alt="star" />
+                  <span class="dishes_details_rating">4.8</span>
+                </div>
+                <div class="dishes_item_bottom">
+                  <span class="dishes_item_price">$12.99</span>
+                  <button class="add_button">
+                    <img src="/firstProject/images/Add.svg" alt="add button" />
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <div class="dishes_main_item">
+              <img src="/firstProject/images/Food Image2.svg" alt="" />
+              <div class="dishes_item_information">
+                <span class="item_highlight highlight trending">Trending</span>
+                <span class="dishes_item_name">Swe Dish</span>
+                <div class="dishes_item_details">
+                  <span class="dishes_details_time">34min •</span>
+                  <img src="/firstProject/images/purpleStar.svg" alt="star" />
+                  <span class="dishes_details_rating">4.9</span>
+                </div>
+                <div class="dishes_item_bottom">
+                  <span class="dishes_item_price">$19.99</span>
+                  <button class="add_button">
+                    <img src="/firstProject/images/Add.svg" alt="add button" />
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <div class="dishes_main_item">
+              <img src="/firstProject/images/Food Image3.svg" alt="" />
+              <div class="dishes_item_information">
+                <span class="item_highlight highlight supreme">Supreme</span>
+                <span class="dishes_item_name">Swe Dish</span>
+                <div class="dishes_item_details">
+                  <span class="dishes_details_time">34min •</span>
+                  <img src="/firstProject/images/purpleStar.svg" alt="star" />
+                  <span class="dishes_details_rating">4.9</span>
+                </div>
+                <div class="dishes_item_bottom">
+                  <span class="dishes_item_price">$19.99</span>
+                  <button class="add_button">
+                    <img src="/firstProject/images/Add.svg" alt="add button" />
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <div class="dishes_main_item">
+              <img src="/firstProject/images/Food Image1.svg" alt="" />
+              <div class="dishes_item_information">
+                <span class="item_highlight highlight healthy">Healthy</span>
+                <span class="dishes_item_name">Chicken Hell</span>
+                <div class="dishes_item_details">
+                  <span class="dishes_details_time">24min •</span>
+                  <img src="/firstProject/images/purpleStar.svg" alt="star" />
+                  <span class="dishes_details_rating">4.8</span>
+                </div>
+                <div class="dishes_item_bottom">
+                  <span class="dishes_item_price">$12.99</span>
+                  <button class="add_button">
+                    <img src="/firstProject/images/Add.svg" alt="add button" />
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <div class="dishes_main_item">
+              <img src="/firstProject/images/Food Image4.svg" alt="" />
+              <div class="dishes_item_information">
+                <span class="item_highlight highlight trending">Trending</span>
+                <span class="dishes_item_name">Swe Dish</span>
+                <div class="dishes_item_details">
+                  <span class="dishes_details_time">34min •</span>
+                  <img src="/firstProject/images/purpleStar.svg" alt="star" />
+                  <span class="dishes_details_rating">4.9</span>
+                </div>
+                <div class="dishes_item_bottom">
+                  <span class="dishes_item_price">$19.99</span>
+                  <button class="add_button">
+                    <img src="/firstProject/images/Add.svg" alt="add button" />
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </body>
