button fix + purchase section

--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -152,10 +152,7 @@
               </li>
             </ul>
             <div class="application_right_more">
-              <button class="more_button purpleButton">
-                Download
-                <img src="/firstProject/images/Arrow.svg" alt="whiteArrow" />
-              </button>
+              <button class="more_button purpleButton">Download -></button>
               <img
                 src="/firstProject/images/Vector 14.svg"
                 alt="vectorArrow"
@@ -298,7 +295,7 @@
               <img src="/firstProject/images/Food Image3.svg" alt="" />
               <div class="dishes_item_information">
                 <span class="item_highlight highlight supreme">Supreme</span>
-                <span class="dishes_item_name">Swe Dish</span>
+                <span class="dishes_item_name">Fish Hell Veg</span>
                 <div class="dishes_item_details">
                   <span class="dishes_details_time">34min •</span>
                   <img src="/firstProject/images/purpleStar.svg" alt="star" />
@@ -347,6 +344,116 @@
                   <button class="add_button">
                     <img src="/firstProject/images/Add.svg" alt="add button" />
                   </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="dishes_bottom">
+            <a href="#">
+              <span class="dishes_bottom_text"> View All -> </span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="purchase">
+      <div class="container">
+        <div class="purchase_wrapper">
+          <div class="purchase_inner">
+            <div class="purchase_left">
+              <span class="purchase_left_text"
+                >Control <purple>Purchases</purple> Via Dashboard</span
+              >
+              <div class="purchase_left_list">
+                <div class="purchase_left_list_item">
+                  <div class="purchase_left_card card">
+                    <img
+                      src="/firstProject/images/Food Image.svg"
+                      alt="smallPlate"
+                      id="smallPlate"
+                    />
+                    <div class="card_text">
+                      <span class="card_title">Chicken Hell</span>
+                      <span class="card_subtitle">On The Way</span>
+                      <span class="card_time">3:09 PM</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="purchase_left_list_item">
+                  <div class="purchase_left_card card">
+                    <img
+                      src="/firstProject/images/Food Image2.svg"
+                      alt="smallPlate"
+                      id="smallPlate"
+                    />
+                    <div class="card_text">
+                      <span class="card_title">Swe Dish</span>
+                      <span class="card_subtitle delivered">Delivered</span>
+                      <span class="card_time">Yesterday</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="purchase_left_list_item">
+                  <div class="purchase_left_card card">
+                    <img
+                      src="/firstProject/images/Food Image3.svg"
+                      alt="smallPlate"
+                      id="smallPlate"
+                    />
+                    <div class="card_text">
+                      <span class="card_title">Fish Hell Veg</span>
+                      <span class="card_subtitle canceled">Canceled</span>
+                      <span class="card_time">Yesterday</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="purchase_right">
+              <div class="right_information">
+                <div class="right_information_header">
+                  <span class="right_information_header_text">Purchases</span>
+                  <select
+                    class="right_information_header_select"
+                    name="date"
+                    id=""
+                  >
+                    <option value="1">Week</option>
+                    <option value="2">Month</option>
+                    <option value="3">Year</option>
+                  </select>
+                </div>
+                <div class="right_information_main">
+                  <div class="right_information_main_item">
+                    <img
+                      src="/firstProject/images/purpleIcon.svg"
+                      alt="purple icon"
+                    />
+                    <div class="right_information_main_item_left">
+                      <span class="item_left_title">Expense</span>
+                      <span class="item_left_subtitle">Increased By 10%</span>
+                    </div>
+                    <div class="right_information_main_item_right">
+                      <span class="item_right_price">$409.00</span>
+                    </div>
+                  </div>
+
+                  <div class="right_information_main_item">
+                    <img
+                      src="/firstProject/images/greenIcon.svg"
+                      alt="green icon"
+                    />
+                    <div class="right_information_main_item_left">
+                      <span class="item_left_title">Vocher Usage</span>
+                      <span class="item_left_subtitle">Increased By 5%</span>
+                    </div>
+                    <div class="right_information_main_item_right">
+                      <span class="item_right_price">$45.78</span>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
