--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -449,6 +449,11 @@
                     <div class="right_information_main_item_left">
                       <span class="item_left_title">Vocher Usage</span>
                       <span class="item_left_subtitle">Increased By 5%</span>
+                      <img
+                        src="/firstProject/images/yellow form.svg"
+                        alt=""
+                        id="yellow_form"
+                      />
                     </div>
                     <div class="right_information_main_item_right">
                       <span class="item_right_price">$45.78</span>
